tests/ui/delegation/hir-crate-items-before-lowering-ices.stderr
error[E0428]: the name `foo` is defined multiple times
  --> $DIR/hir-crate-items-before-lowering-ices.rs:10:17
   |
LL |                 fn foo() {}
   |                 -------- previous definition of the value `foo` here
LL |                 reuse foo;
   |                 ^^^^^^^^^^ `foo` redefined here
   |
   = note: `foo` must be defined only once in the value namespace of this block

error[E0425]: cannot find value `async` in this scope
  --> $DIR/hir-crate-items-before-lowering-ices.rs:60:13
   |
LL |             async || {};
   |             ^^^^^ not found in this scope

error: complex const arguments must be placed inside of a `const` block
  --> $DIR/hir-crate-items-before-lowering-ices.rs:8:13
   |
LL | /             {
LL | |                 fn foo() {}
LL | |                 reuse foo;
LL | |                 2
LL | |             },
   | |_____________^

error: complex const arguments must be placed inside of a `const` block
  --> $DIR/hir-crate-items-before-lowering-ices.rs:41:13
   |
LL | /             {
LL | |
LL | |
LL | |                 struct W<I>;
...  |
LL | |             },
   | |_____________^

error: `#[deprecated]` attribute cannot be used on delegations
  --> $DIR/hir-crate-items-before-lowering-ices.rs:23:9
   |
LL |         #[deprecated]
   |         ^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = help: `#[deprecated]` can be applied to associated consts, associated types, constants, crates, data types, enum variants, foreign statics, functions, inherent impl blocks, macro defs, modules, statics, struct fields, traits, type aliases, and use statements
   = note: `#[deny(useless_deprecated)]` on by default

error[E0747]: constant provided when a type was expected
  --> $DIR/hir-crate-items-before-lowering-ices.rs:41:13
   |
LL | /             {
LL | |
LL | |
LL | |                 struct W<I>;
...  |
LL | |             },
   | |_____________^

error[E0061]: this function takes 0 arguments but 1 argument was supplied
  --> $DIR/hir-crate-items-before-lowering-ices.rs:32:11
   |
LL |       reuse a as b {
   |  ___________^______-
LL | |         fn foo<T>() {};
LL | |         foo
LL | |     }
   | |_____- unexpected argument of type `fn() {b::foo::<_>}`
   |
note: function defined here
  --> $DIR/hir-crate-items-before-lowering-ices.rs:30:8
   |
LL |     fn a() {}
   |        ^
help: remove the extra argument
   |
LL -     reuse a as b {
LL +     reuse {
   |

error[E0308]: mismatched types
  --> $DIR/hir-crate-items-before-lowering-ices.rs:60:22
   |
LL |             async || {};
   |                      ^^ expected `bool`, found `()`

error: aborting due to 8 previous errors

Some errors have detailed explanations: E0061, E0308, E0425, E0428, E0747.
For more information about an error, try `rustc --explain E0061`.
